  * XMI Export: associations and communication paths can connect to ports
  * XMI Export: nested activities are exported as StructuredActivityNode
  * icons beautified
  * program renamed from crystal_facet_uml to crystal-facet-uml

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 05 Dec 2020 16:30:00 +0100

crystal-facet-uml (1.26.0-1) UNRELEASED; urgency=medium

  [ Olaf Hering ]
  * CMakeLists adapted to find pangocairo (Closes: #2)

  [ Mike Gabriel ]
  * Grammar fixes in application messages

  [ Andreas Warnke ]
  * xmi export exports sequence, timing, communication and interaction overview
  * xmi export creates property-elements at association-member-ends
  * system boundary renamed to subsystem (to match uml 2.5.1 spec)
  * The default relationship type between lifelines is a synchronous call

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 22 Nov 2020 16:30:00 +0100

crystal-facet-uml (1.25.1-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * cmake does not depend on c++ compiler anymore

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 29 Oct 2020 20:30:00 +0100

crystal-facet-uml (1.25.0-2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * yml script for ci added

 -- Andreas Warnke <cfu@andreaswarnke.de>  Wed, 28 Oct 2020 07:40:00 +0100

crystal-facet-uml (1.25.0-1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * moving ports follow the cursor more accurate
  * Constraint Blocks show their ports completely inside
  * Artifacts and Components do not waste space for contained children
  * Comment titles do not overlap with the comment-corner
  * packages containing children display their title in the tab-symbol
  * layouting containments does not reserve columns/rows for the container
  * Feature/Composite Requirement does not exist anymore,
    data from older versions is auto-converted to Requirement
  * Requirements are displyed as box-with-label omitting the description
  * Interaction Overview Diagram is redesigned,