@@ -10,20 +10,17 @@ export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 # see ENVIRONMENT in dpkg-buildflags(1)
 # package maintainers to append CFLAGS
 export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
-# package maintainers to append LDFLAGS
-export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
-
 
 %:
 	dh $@
 
-
-# dh_make generated override targets
-# This is example for Cmake (See https://bugs.debian.org/641051 )
 override_dh_auto_configure:
-	#dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
-	cmake -G 'Unix Makefiles' \
-	    -DCMAKE_INSTALL_PREFIX=/usr \
+	dh_auto_configure -- \
 	    -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE \
 	    -DCMAKE_BUILD_TYPE=Release
-	DEB_BUILD_HARDENING=1 make VERBOSE=1
+
+override_dh_auto_build:
+	DEB_BUILD_HARDENING=1 dh_auto_build
+
+get-orig-source:
+	uscan --noconf --force-download --rename --download-current-version --destdir=..
